# UUV-Simulation-Analysis

./: .gitignore  CMakeLists.txt  README.md  run.sh  scenario.json  spawn_config.json
.github/workflows/: A_star_algorithm_chek.yaml
Maps/: Readme.md
Maps/test2/: Harbour_Depth_Area.shx
src/: main.cpp
src/agents/: agent.h
src/mapCreation/: Readme.md  mapCreation.cpp  mapCreation.h
src/mapVisualizer/: mapVisualizer.cpp  mapVisualizer.h
src/simulation/: simResult.cpp  simResult.h  simulation.cpp  simulation.h
src/spawnConfig/: spawnConfig.cpp  spawnConfig.h
tests/: test_simulation.cpp
tests/fixtures/: grid_cache.txt  results.json  scenario.json
